--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -12,4 +12,5 @@
 @import "./stickyButtons";
 @import "./animations";
 @import "./styleFiles";
+@import "./cursor";
 // Style.scss - the main scss file.
