--- a/Styles/_cursor.scss
+++ b/Styles/_cursor.scss
@@ -20,3 +20,12 @@ i {
   position: relative;
   z-index: 1; /* Keep icons above the custom cursor */
 }
+a:hover ~ .custom-cursor {
+  display: none; /* Hide the cursor */
+}
+
+/* Ensure the cursor is shown again when leaving the icon */
+a {
+  position: relative;
+  z-index: 1; /* Keep icons above the custom cursor */
+}
