--- a/Styles/_variables.scss
+++ b/Styles/_variables.scss
@@ -87,3 +87,14 @@ $icon-glowing-shadow: inset 0 0 50px #fff,
   /* outer white */ -10px 0 80px #f0f, /* outer left magenta */ 10px 0 80px #0ff; /* outer right cyan */
 $title-span-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
   2px 2px 2px rgba(255, 255, 255, 0.04);
+$sitemap-text-shadow: 0px 0px 0 rgb(234, 234, 234), 1px 1px 0 rgb(223, 223, 223),
+  2px 2px 0 rgb(212, 212, 212), 3px 3px 0 rgb(202, 202, 202),
+  4px 4px 0 rgb(191, 191, 191), 5px 5px 0 rgb(180, 180, 180),
+  6px 6px 0 rgb(169, 169, 169), 7px 7px 0 rgb(158, 158, 158),
+  8px 8px 0 rgb(147, 147, 147), 9px 9px 8px rgba(0, 0, 0, 0.6),
+  9px 9px 1px rgba(0, 0, 0, 0.5), 0px 0px 8px rgba(0, 0, 0, 0.2);
+$sitemap-h2-shadow: 0px 0px 0 rgb(226, 226, 226), 1px 1px 0 rgb(208, 208, 208),
+  2px 2px 0 rgb(189, 189, 189), 3px 3px 0 rgb(171, 171, 171),
+  4px 4px 0 rgb(152, 152, 152), 5px 5px 0 rgb(133, 133, 133),
+  6px 6px 5px rgba(0, 0, 0, 0.8), 6px 6px 1px rgba(0, 0, 0, 0.5),
+  0px 0px 5px rgba(0, 0, 0, 0.2);
