--- a/Styles/mobileResume.css
+++ b/Styles/mobileResume.css
@@ -33,6 +33,10 @@ a:visited {
   color: inherit;
 }
 
+.profile-page span {
+  text-align: left !important;
+}
+
 .main-resume {
   display: flex;
   justify-content: center;
@@ -47,6 +51,7 @@ a:visited {
   display: flex;
   perspective: 250rem;
   flex-direction: column !important;
+  margin: 0 auto;
 }
 
 .book-page {
@@ -57,7 +62,7 @@ a:visited {
   background: var(--pages-color);
   display: flex;
   padding: 2rem;
-  justify-content: center;
+  justify-content: center !important;
   flex-direction: column !important;
   margin-bottom: 3rem;
   margin-top: 1rem;
