--- a/Styles/mobileResume.scss
+++ b/Styles/mobileResume.scss
@@ -29,6 +29,9 @@ a {
     color: inherit;
   }
 }
+.profile-page span {
+  text-align: left !important;
+}
 .main-resume {
   display: flex;
   justify-content: center;
@@ -42,6 +45,7 @@ a {
   display: flex;
   perspective: 250rem;
   flex-direction: column !important;
+  margin: 0 auto;
 }
 .book-page {
   box-shadow: -0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.1);
@@ -51,7 +55,7 @@ a {
   background: var(--pages-color);
   display: flex;
   padding: 2rem;
-  justify-content: center;
+  justify-content: center !important;
   flex-direction: column !important;
   margin-bottom: 3rem;
   margin-top: 1rem;
