--- a/Styles/_variables.scss
+++ b/Styles/_variables.scss
@@ -98,3 +98,4 @@ $sitemap-h2-shadow: 0px 0px 0 rgb(226, 226, 226), 1px 1px 0 rgb(208, 208, 208),
   4px 4px 0 rgb(152, 152, 152), 5px 5px 0 rgb(133, 133, 133),
   6px 6px 5px rgba(0, 0, 0, 0.8), 6px 6px 1px rgba(0, 0, 0, 0.5),
   0px 0px 5px rgba(0, 0, 0, 0.2);
+$form-BG: #f2d7ffab;
