changes h2 titles for SEO

--- a/Styles/style_resume.css
+++ b/Styles/style_resume.css
@@ -53,10 +53,12 @@ a:visited {
     transform: rotate(0deg);
   }
 }
-h3, h2 {
+h3,
+h2 {
   text-shadow: none;
 }
-h3:hover, h2:hover {
+h3:hover,
+h2:hover {
   text-shadow: none;
 }
 
@@ -116,7 +118,7 @@ h3:hover, h2:hover {
 }
 
 .profile-page img {
-  max-width: 12rem;
+  max-width: 40%;
   border-radius: 50%;
   border: 0.25rem solid var(--main-color);
   margin-bottom: 0.8rem;
@@ -229,11 +231,12 @@ h3:hover, h2:hover {
   flex-direction: column !important;
 }
 
-.workeduc-content h3,
-.services-content h3,
-.skills-content h3 {
+.workeduc-content h2,
+.services-content h2,
+.skills-content h2 {
   margin-left: -1rem;
   color: #a009f7;
+  font-size: 1.2rem;
 }
 
 .title {
@@ -311,7 +314,7 @@ h3:hover, h2:hover {
   flex: 1 1 20rem !important;
 }
 
-.skills-content h3 {
+.skills-content h2 {
   font-size: 1.3rem;
   line-height: 2;
   margin-bottom: 0.6rem;
