--- a/Styles/mobileResume.scss
+++ b/Styles/mobileResume.scss
@@ -148,7 +148,7 @@ a {
   border: inset $primaryColor;
 }
 
-.workeduc-box h3 {
+.workeduc-box h2 {
   z-index: 0;
 }
 .workeduc-content,
@@ -156,11 +156,11 @@ a {
   display: flex;
   flex-direction: column !important;
 }
-.workeduc-content h3,
-.services-content h3,
-.skills-content h3 {
+.workeduc-content h2,
+.services-content h2,
+.skills-content h2 {
   margin-left: -1rem;
-  // margin-top: -0.3rem;
+  font-size: 1.2rem;
   color: $primaryColor;
 }
 .title {
@@ -214,7 +214,7 @@ a {
   text-align: center;
   justify-content: center;
 }
-.skills-content h3 {
+.skills-content h2 {
   font-size: 1.3rem;
   line-height: 2;
   margin-bottom: 0.6rem;
