--- a/Styles/_variables.scss
+++ b/Styles/_variables.scss
@@ -99,3 +99,7 @@ $sitemap-h2-shadow: 0px 0px 0 rgb(226, 226, 226), 1px 1px 0 rgb(208, 208, 208),
   6px 6px 5px rgba(0, 0, 0, 0.8), 6px 6px 1px rgba(0, 0, 0, 0.5),
   0px 0px 5px rgba(0, 0, 0, 0.2);
 $form-BG: #f2d7ffab;
+$colorful-shadow: 5px 5px 15px 5px #ff8080, -9px 5px 15px 5px #ffe488,
+  -7px -5px 15px 5px #8cff85, 12px -5px 15px 5px #80c7ff,
+  12px 10px 15px 7px #e488ff, -10px 10px 15px 7px #ff616b,
+  -10px -7px 27px 1px #8e5cff, 5px 5px 15px 5px rgba(0, 0, 0, 0);
