--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -13,4 +13,5 @@
 @import "./animations";
 @import "./styleFiles";
 @import "./cursor";
+@import "./bubbleCursor";
 // Style.scss - the main scss file.
