--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -45,6 +45,7 @@
       border-radius: 50%;
       padding: 1rem;
       border: $primaryColor outset 0.4rem;
+      transition: 1s;
     }
     i:hover {
       transform: scale(1.2);
