--- a/Styles/style.css
+++ b/Styles/style.css
@@ -573,7 +573,6 @@ footer .logo:hover {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .paragraph-div img:hover {
-  width: 30rem;
   border-color: #a009f7;
   transition: 2s;
 }
@@ -1358,6 +1357,7 @@ html[data-page=index-german] .h4-title {
   border-radius: 50%;
   padding: 1rem;
   border: #a009f7 outset 0.4rem;
+  transition: 1s;
 }
 .contact-options-divs .contact-form i:hover,
 .contact-options-divs .contact-directly i:hover {
