--- a/Styles/sitemap.css
+++ b/Styles/sitemap.css
@@ -55,11 +55,11 @@ body {
 section {
   padding: 3.2rem 0;
   margin: 2rem;
-  background-image: linear-gradient(-45deg, rgba(225, 245, 116, 0.918), rgb(252, 151, 252), rgb(217, 140, 248));
+  background-image: linear-gradient(-45deg, rgb(255, 255, 255), rgb(254, 206, 254), rgb(231, 187, 248));
   background-size: 400% 400%;
   animation: gradient 60s ease infinite;
   border-radius: 3rem;
-  box-shadow: 0.2rem 0rem 0.6rem rgb(255, 145, 0);
+  box-shadow: 0.2rem 0rem 0.6rem rgb(106, 0, 255);
 }
 
 .container {
@@ -77,16 +77,9 @@ h4 {
   position: relative;
   color: #fff;
   letter-spacing: 0.2rem;
-  text-shadow: 0.5rem 0.3rem 0.5rem rgb(129, 130, 133);
   border-radius: 2rem;
+  text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275);
   padding: 0.5rem 1rem;
-}
-
-h3:hover,
-h4:hover {
-  font-weight: bolder;
-  text-shadow: 0 0 2rem #fff, 0 0 3rem #ffffff, 0 0 4rem #ffffff, 0 0 5rem #ff4da6, 0 0 6rem #ff4da6, 0 0 7rem #ff4da6, 0 0 8rem #ff4da6;
-  transition: 2s;
 }
 
 .h2-title,
@@ -98,28 +91,19 @@ h4:hover {
 
 /*Settings and design for all the H2 titles */
 .h2-title h2 {
-  font-size: 3.5rem;
-}
-.h2-title h2:hover {
-  color: rgb(247, 15, 235);
+  font-size: 4rem;
+  color: #a009f7;
   text-shadow: 1px 1px 1px #c00eec, 1px 2px 1px #ffffff, 1px 3px 1px #ffffff, -1px 3px 2px #ffffff, -1px -1px 1px #e79aee, 2px -1px 2px #a5cef0, 1px 7px 4px rgba(175, 43, 228, 0.4), 1px 9px 10px rgba(194, 103, 236, 0.2), 1px 9px 35px rgba(212, 0, 255, 0.2), 1px 9px 60px rgba(243, 20, 243, 0.4);
-  transition: 2s;
 }
 
 /*Settings and design for all the H3 titles */
 .h3-title h3 {
   font-size: 2.5rem;
 }
-.h3-title h3:hover {
-  color: rgb(0, 195, 255);
-}
 
 /*Settings and design for all the H4 titles */
 .h4-title h4 {
   font-size: 2rem;
-}
-.h4-title h4:hover {
-  color: rgb(15, 180, 0);
 }
 
 /* settings for all h5 (project titles) in the website */
@@ -229,14 +213,15 @@ button {
   color: #fff;
   background-color: #a009f7;
   border-radius: 2rem;
-  box-shadow: 0.5rem 0.3rem 0.5rem rgb(129, 130, 133);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  transition: 1s;
   z-index: 100;
   cursor: pointer;
   font-family: "Courgette";
 }
 button:hover {
-  box-shadow: 0.5rem 0.5rem 0.5rem rgb(127, 169, 223);
-  transform: scale(1.1);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  font-weight: bolder;
   transition: 1s;
 }
 
@@ -301,7 +286,7 @@ h1 {
 
 .sitemap-english,
 .sitemap-german {
-  background: linear-gradient(-45deg, rgba(225, 245, 116, 0.918), rgb(252, 151, 252), rgb(217, 140, 248));
+  background: linear-gradient(-45deg, rgb(255, 255, 255), rgb(254, 206, 254), rgb(231, 187, 248));
   border-radius: 3rem;
 }
 .sitemap-english h2,
