--- a/Styles/style.css
+++ b/Styles/style.css
@@ -62,8 +62,8 @@ section {
   background-image: linear-gradient(
     -45deg,
     rgb(255, 255, 255),
-    rgb(240, 70, 246),
-    rgb(223, 171, 253)
+    rgb(229, 160, 254),
+    rgb(172, 200, 241)
   );
   background-size: 400% 400%;
   animation: gradient 60s ease infinite;
@@ -245,7 +245,7 @@ button:hover {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
   transition: 1s;
-  font-weight: bolder;
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 480px) and (orientation: portrait) {
@@ -1861,8 +1861,8 @@ html[data-page="index-german"] .h4-title {
 
 .custom-cursor {
   position: absolute;
-  width: 3rem; /* Cursor width */
-  height: 3rem; /* Cursor height */
+  width: 1.5rem; /* Cursor width */
+  height: 1.5rem; /* Cursor height */
   border-radius: 50%; /* Make it circular */
   background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white */
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
