--- a/Styles/_animations.scss
+++ b/Styles/_animations.scss
@@ -23,6 +23,19 @@
     }
   }
 }
+@mixin tableAnimation {
+  @keyframes tableAnimation {
+    0% {
+      color: $primaryColor;
+    }
+    50% {
+      color: #00ff00;
+    }
+    100% {
+      color: $primaryColor;
+    }
+  }
+}
 @mixin rotate {
   @keyframes rotate {
     0% {
@@ -49,28 +62,66 @@
     }
   }
 }
+@mixin BlackWhiteAnimation {
+  @keyframes BlackWhiteAnimation {
+    0% {
+      border-color: rgb(255, 253, 253);
+    }
+    25% {
+      border-color: rgb(190, 188, 188);
+    }
+    50% {
+      border-color: rgb(117, 116, 116);
+    }
+    75% {
+      border-color: rgb(190, 188, 188);
+    }
+    100% {
+      border-color: rgb(255, 253, 253);
+    }
+  }
+}
+@mixin colorListAnimation {
+  @keyframes colorListAnimation {
+    0% {
+      background-color: #e2b5b5;
+    }
+    25% {
+      background-color: gold;
+    }
+    50% {
+      background-color: #00ff00;
+    }
+    75% {
+      background-color: rgb(241, 186, 147);
+    }
+    100% {
+      background-color: #b4a0ec;
+    }
+  }
+}
 @mixin textColorChanging {
   @keyframes textColorChanging {
     0% {
       color: rgb(238, 96, 219);
     }
     16.67% {
-      color: rgb(250, 99, 250);
+      color: rgb(238, 96, 96);
     }
     33.33% {
-      color: rgb(107, 9, 235);
+      color: rgb(235, 193, 9);
     }
     50% {
-      color: rgb(11, 3, 250);
+      color: rgb(63, 60, 60);
     }
     66.67% {
-      color: rgb(28, 110, 241);
+      color: rgb(51, 51, 235);
     }
     83.33% {
-      color: rgb(0, 132, 255);
+      color: rgb(96, 233, 238);
     }
     100% {
-      color: rgb(237, 10, 214);
+      color: rgb(68, 240, 105);
     }
   }
 }
@@ -80,26 +131,39 @@
       border-color: rgb(238, 96, 219);
     }
     16.67% {
-      border-color: rgb(191, 0, 255);
+      border-color: rgb(238, 96, 96);
     }
     33.33% {
-      border-color: rgb(126, 0, 245);
+      border-color: rgb(138, 41, 230);
     }
     50% {
       border-color: rgb(96, 174, 238);
     }
     66.67% {
-      border-color: rgb(154, 41, 240);
+      border-color: rgb(51, 51, 235);
     }
     83.33% {
-      border-color: rgb(63, 136, 253);
+      border-color: rgb(96, 233, 238);
     }
     100% {
-      border-color: rgb(212, 0, 255);
+      border-color: rgb(68, 240, 105);
     }
   }
 }
-
+@mixin lightingAnimation {
+  @keyframes lightingAnimation {
+    0% {
+      color: $mainTextColor;
+    }
+    50% {
+      color: rgb(133, 127, 127);
+    }
+    100% {
+      color: $mainTextColor;
+      // text-shadow: 2rem 2rem 2rem $mainTextColor;
+    }
+  }
+}
 @keyframes dropdown {
   0% {
     max-height: 0;
