--- a/Styles/_variables.scss
+++ b/Styles/_variables.scss
@@ -7,15 +7,17 @@ $h1Shadow: 1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191,
   1px 30px 60px rgba(16, 16, 16, 0.4);
 $bodyBg: linear-gradient(
   -45deg,
-  rgb(250, 71, 250),
+  rgb(241, 50, 216),
+  rgb(208, 98, 230),
   rgb(124, 197, 245),
-  rgb(158, 158, 235)
+  rgb(158, 158, 235),
+  rgb(255, 0, 221)
 );
 $sectionBg: linear-gradient(
   -45deg,
-  rgb(255, 255, 255),
-  rgb(254, 206, 254),
-  rgb(231, 187, 248),
+  rgba(225, 245, 116, 0.918),
+  rgb(252, 151, 252),
+  rgb(217, 140, 248)
 );
 $hHover: 0 0 2rem #fff, 0 0 3rem #ffffff, 0 0 4rem #ffffff, 0 0 5rem #ff4da6,
   0 0 6rem #ff4da6, 0 0 7rem #ff4da6, 0 0 8rem #ff4da6;
@@ -28,6 +30,18 @@ $mainShadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
   rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 $elementsTbHover: 0 0 2rem #fff, 0 0 3rem #3fdee4, 0 0 4rem #a00de4,
   0 0 5rem #4d9aff, 0 0 6rem #11cef0, 0 0 7rem #75e3f7, 0 0 8rem #a87fdd;
+$floatBtnBg: linear-gradient(
+  135deg,
+  rgba(255, 192, 203, 0.644),
+  rgba(228, 207, 168, 0.644),
+  rgba(204, 236, 168, 0.596)
+);
+$floatBtnBgHover: linear-gradient(
+  135deg,
+  rgb(236, 199, 236),
+  rgb(198, 198, 228),
+  rgb(193, 224, 193)
+);
 $navShadow: 1px 1px 1px #5ff6ff, 1px 2px 1px #ffffff, 1px 3px 1px #ffffff,
   -1px 3px 2px #ffffff, -1px -1px 1px #ffffff, 2px -1px 2px #a5cef0,
   1px 7px 4px rgba(0, 9, 35, 0.4), 1px 9px 10px rgba(0, 64, 255, 0.2),
@@ -49,7 +63,7 @@ $portfolioBg2: radial-gradient(
   rgba(238, 121, 121, 0.5)
 );
 $sliderShadow: 0px 1px 2px 0px rgba(137, 45, 223, 0.7),
-  1px 2px 4px 0px rgba(6, 155, 255, 0.7),
+  1px 2px 4px 0px rgba(81, 224, 15, 0.7),
   2px 4px 8px 0px rgba(119, 15, 238, 0.7),
   2px 4px 16px 0px rgba(233, 6, 157, 0.7);
 $skillsToolsBg: linear-gradient(
@@ -89,4 +103,5 @@ $colorful-shadow: 5px 5px 15px 5px #ff8080, -9px 5px 15px 5px #ffe488,
   -7px -5px 15px 5px #8cff85, 12px -5px 15px 5px #80c7ff,
   12px 10px 15px 7px #e488ff, -10px 10px 15px 7px #ff616b,
   -10px -7px 27px 1px #8e5cff, 5px 5px 15px 5px rgba(0, 0, 0, 0);
-$titlesShadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px #4fa4fab8;
+$titlesShadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7,
+  0 6px 6px rgba(79, 164, 250, 0.7215686275);
