--- a/Styles/sitemap.scss
+++ b/Styles/sitemap.scss
@@ -117,7 +117,7 @@ h1 {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    margin: 1rem 0;
+    margin: 1rem;
   }
   .sitemap div {
     flex: 1 1 100%;
