--- a/Styles/_basicSettings.scss
+++ b/Styles/_basicSettings.scss
@@ -73,7 +73,20 @@ h4 {
     font-size: 2.5rem;
   }
 }
-
+html[lang="de"][data-page="index-german"],
+html[lang="de"][data-page="portfolio-german"],
+html[lang="de"][data-page="files-german"],
+html[lang="de"][data-page="contact-german"] {
+  h2 {
+    font-size: 3.5rem;
+  }
+  h3 {
+    font-size: 2.3rem;
+  }
+  h4 {
+    font-size: 2rem;
+  }
+}
 /* settings for all h5 (project titles) in the website */
 h5 {
   @include fontNtext(
